--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -117,12 +117,12 @@ font-family: var(--primary-font);
   color: black;
 }
 .outlined-basic{
-  margin-top: 30px;
+  margin-top: 30px !important;
   font-family: var(--primary-font);
   width:800px;
 }
 .form-1 {
-  margin-top: 20px;
+  margin-top: 20px !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -130,7 +130,7 @@ font-family: var(--primary-font);
 }
 .outlined-basic-1 {
   width: 400px;
-  padding-right: 10px;
+  padding-right: 10px !important;
   font-family: var(--primary-font);
 }
 .outlined-basic-2 {
@@ -138,7 +138,7 @@ font-family: var(--primary-font);
   font-family: var(--primary-font);
 }
 .outlined-basic-3 {
-  margin-top: 20px;
+  margin-top: 20px !important;
     width: 800px;
     font-family: var(--primary-font);
 }
