--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -22,6 +22,7 @@
 }
 .container {
   display: flex;
+  font-family: var(--primary-font) !important;
   flex-direction: column;
   justify-content: center;
   align-items: center;
