--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -96,21 +96,13 @@ display: flex;
   background-color: gray;
 }
 .or{
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-family: var(--primary-font);
   font-weight: 800;
   font-size: 12px;
   color: gray;
 
-}
-.form{
-  margin-top:30px;
-  display:flex;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
 }
 .form-title
 {
@@ -123,37 +115,7 @@ font-family: var(--primary-font);
     padding-right: 20px;
   color: black;
 }
-.outlined-basic{
-  margin-top: 30px !important;
-  font-family: var(--primary-font);
-  width:800px;
-}
-.form-1 {
-  margin-top: 20px !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-}
-.outlined-basic-1 {
-  width: 400px;
-  padding-right: 10px !important;
-  font-family: var(--primary-font);
-}
-.outlined-basic-2 {
-  width: 400px;
-  font-family: var(--primary-font);
-}
-.outlined-basic-3 {
-  margin-top: 20px !important;
-    width: 800px;
-    font-family: var(--primary-font);
-}
-.radio-label{
-  margin-top: 20px;
-  font-family: var(--primary-font);
-}
-.radio-label-1 {
+.input-label {
   margin-top: 20px;
   font-family: var(--primary-font);
 }
