--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -107,7 +107,7 @@ display: flex;
 .form-title
 {
 font-family: var(--primary-font);
-  font-weight: 800;
+  font-weight: 800 !important;
   font-size: 15px;
   display: flex;
   justify-content: center;
