Added design for add blog page

--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -195,16 +195,31 @@ input[type="file"] {
 .btn-post {
   margin-top: 5px;
   margin-bottom: 5px;
-  margin-right: 5px;
-  height: 30px;
+  margin: auto;
+  margin-top: 10px !important;
+  height: 40px;
   border-radius: 40px;
   width: 100px;
-  float: right;
   font-weight: 700;
   font-size: 15px;
   font-family: var(--primary-font);
+  display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 .btn:hover {
   background-color: #85CB33;
   color: #fff;
+}
+.add-title
+{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: var(--primary-font);
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 82px;
+    letter-spacing: -0.02em;
 }
