Updated UI of Add Blog

--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -223,3 +223,20 @@ input[type="file"] {
     line-height: 82px;
     letter-spacing: -0.02em;
 }
+.blog-title
+{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1%;
+    
+}
+.blog-title-input{
+  font-family: var(--primary-font);
+    font-weight: 450;
+    font-size: 20px;
+    padding:10px;
+    letter-spacing: -0.02em;
+    border: gray 1px solid;
+    margin: 5px;
+    width: 100%;
+}
