--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -123,6 +123,20 @@
   padding-left: 20px;
   padding-right: 20px;
   color: black;
+  margin-bottom:10px;
+  margin-top:10px;
+}
+.form-title-1 {
+  font-family: var(--primary-font);
+  font-weight: 800 !important;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: black;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .input-label {
