--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -135,8 +135,8 @@
   padding-left: 20px;
   padding-right: 20px;
   color: black;
-  margin-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 10px !important;
+  margin-top: 20px !important;
 }
 
 .input-label {
