--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -27,7 +27,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 80px;
   padding-bottom: 40px;
 }
 
@@ -276,7 +276,6 @@ h2{
     display: flex;
       font-family: var(--primary-font);
       font-size: 17px;
-      line-height: 25px;
       line-height: 40px;
   }
     input[type=number]::-webkit-inner-spin-button,
@@ -289,3 +288,23 @@ h2{
     .box-add{
       margin:20px
     }
+    li{
+      display: flex;
+        font-family: var(--primary-font);
+        font-size: 17px;
+        line-height: 40px;
+    }
+    .blogs{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .blog-card{
+      width: 75%;
+      height:100%
+    }
+        .blog-card:hover {
+         transform: scale(0.95);
+          transition: transform .5s ease;
+        }
