--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -90,7 +90,8 @@
 }
 .button_active-1 {
   height: 45px;
-  width: 150px;
+  width: 130px;
+  margin-left: 60px;
   background-color: #85CB33;
   color: #FFFFFF;
   cursor: pointer;
@@ -101,17 +102,6 @@
 }
 .button_active-1:hover{
   background-color: #79bb2d;
-}
-.button_active-2 {
-  height: 45px;
-  width: 150px;
-  background-color: #FFFFFF;
-  color:#85CB33;
-  cursor: pointer;
-  border-radius: 40px;
-  font-weight: 700;
-  border: none;
-  font-family: var(--primary-font);
 }
 
 
@@ -231,6 +221,12 @@ input[type="file"] {
   font-weight: 700 !important;
     font-size: 14px !important;
     font-family: var(--primary-font) !important;
+}
+.company-button-1 {
+  color: #85CB33 !important;
+  font-weight: 700 !important;
+  font-size: 14px !important;
+  font-family: var(--primary-font) !important;
 }
 .company{
   font-family: var(--primary-font) !important;
@@ -354,11 +350,11 @@ h2{
          transform: scale(0.95);
           transition: transform .5s ease;
         }
-                @media (max-width: 549px) {
+                @media (max-width: 600px) {
                   .button_active-1 {
                     display: none;
                   }
-                  .button_active-2 {
+                  .company-button-1 {
                       display: none;
                   }
                   .box-2{
