--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -302,6 +302,40 @@ h1
     align-items: center;
     margin-top: 65px;
 }
+.h1-landing {
+  font-family: var(--primary-font);
+  font-weight: 800;
+  font-size: 55px;
+  margin-top: 5%;
+  margin-left: 10%;
+  line-height: 70px;
+}
+.p-landing {
+  font-family: var(--primary-font);
+  font-size: 23px;
+  line-height: 40px;
+  font-weight: 400;
+  margin-left: 10%;
+  margin-top: 3%;
+}
+a{
+  font-family: var(--primary-font);
+    font-size: 23px;
+    line-height: 40px;
+    font-weight: 400;
+    color: black;
+}
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin-top: 2%;
+}
+.logo-img
+{
+  transform: scale(0.75);
+}
 h2{
   display: flex;
     justify-content: center;
@@ -361,3 +395,66 @@ h2{
                     flex-grow: 0;
                   }
                 }
+                .card{
+                  width:300px;
+                  height: 320px;
+                  cursor: pointer;
+                  position: relative;
+                  background-image: url('https://static.vecteezy.com/packs/media/components/global/search-explore-nav/img/vectors/term-bg-1-666de2d941529c25aa511dc18d727160.jpg') !important;
+                }
+                .row-card{
+                  margin-left: 9%;
+                  margin-right: 9%;
+                  display: flex;
+                  gap: 50px;
+                  flex-wrap: wrap;
+                  justify-content: space-around;
+                }
+.overlay {
+  position:absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgb(255, 217, 0);
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: black;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: var(--primary-font);
+   display: flex;
+  justify-content: space-around;
+  margin:20px;
+  margin-top:30%;
+}
+.work{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10.5%;
+}
+.work-btn
+{
+  width:150px;
+  height:50px;
+  background-color: black;
+  color: white;
+  transition: 0.5s;
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 13px;
+  border: none;
+  cursor: pointer;
+  margin-top: 2%;
+}
+.work-btn:hover {
+  background-color: rgb(255, 217, 0);
+  color: black;
+}
