--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -877,3 +877,14 @@ footer .bottom-details .bottom_text{
   }
 
 
+.tab{
+  color: var(--text-main);
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: large;
+}
+.tab-1{
+  font-family: var(--primary-font) !important;
+  font-weight: 700;
+  font-size: medium;
+}
