--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -364,6 +364,7 @@ li {
   display: flex;
   font-family: var(--primary-font);
   font-size: 17px;
+  line-height: 40px;
 }
 .blogs {
   display: flex;
