--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -207,9 +207,9 @@ input[type="file"] {
   font-family: var(--primary-font);
 }
 .box-1 {
-  justify-content: space-around !important;
+  justify-content: flex-start !important;
   padding-top: 0.4% !important;
-  align-content: center !important;
+  gap: 20px;
 }
 
 .appbar {
@@ -218,12 +218,6 @@ input[type="file"] {
 }
 
 .company-button {
-  color: #85cb33 !important;
-  font-weight: 700 !important;
-  font-size: 14px !important;
-  font-family: var(--primary-font) !important;
-}
-.company-button-1 {
   color: #85cb33 !important;
   font-weight: 700 !important;
   font-size: 14px !important;
@@ -266,7 +260,7 @@ input[type="file"] {
   justify-content: center;
 }
 .btn:hover {
-  background-color: #85cb33;
+  background-color: rgb(255, 217, 0) ;
   color: #fff;
 }
 .add-title {
@@ -464,7 +458,7 @@ li {
   display: flex;
   gap: 50px;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 .row-card-3 {
 
@@ -944,6 +938,7 @@ footer .bottom-details .bottom_text{
   border: none;
   background: transparent;
   cursor: pointer;
+  color: #000;
 }
 .close-1
 {
