--- a/anile-media-website/styles/globals.css
+++ b/anile-media-website/styles/globals.css
@@ -25,6 +25,70 @@
   --text-card:black;
 }
 
+.cookie_message {
+  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+  border-radius: 10px;
+  padding: 15px 0;
+  background: #f7f8fb;
+  border: 1px solid rgba(0,0,0,.15);
+  box-shadow: 0 0 16px 2px rgba(0,0,0,.05), 0 10px 10px 2px rgba(0,0,0,.05);
+  font-size: 12px;
+  line-height: 40px;
+  border-top: 1px solid #e4e4e4;
+  color:black;
+  position: fixed;
+  z-index: 100;
+  bottom: 10%;
+  right: 2%;
+  margin: auto;
+  max-width: 540px;
+  display: -ms-flexbox;
+  display: flex;
+}
+.cookie_message img {
+  height: 50px;
+  width: 50px;
+  margin: 0 15px;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+.cookie_message span {
+  display: inline-block;
+  line-height: 1.5;
+  padding-right: 16px;
+  border-right: 1px solid rgba(0,0,0,.1);
+}
+.cookie_message a.close {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  border: none ;
+  font-size: 24px;
+  padding: 0 20px 0 16px;
+  position: relative;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  color: #919191 !important;
+  transition: color 0.2s;
+}
+.cookie_message a.close:hover { color: #795548; }
+.close
+{
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  color: #000;
+}
+.close_1
+{
+  display: none;
+}
+
+
+
+
+
 .container {
   display: flex;
   font-family: var(--primary-font) !important;
@@ -92,21 +156,7 @@
   font-weight: 700;
   font-family: var(--primary-font);
 }
-.button_active-1 {
-  height: 45px;
-  width: 130px;
-  margin-left: 60px;
-  background-color: #85cb33;
-  color: var(--text-card);
-  cursor: pointer;
-  border-radius: 40px;
-  font-weight: 700;
-  border: none;
-  font-family: var(--primary-font);
-}
-.button_active-1:hover {
-  background-color: #79bb2d;
-}
+
 
 .button {
   height: 60px;
@@ -206,26 +256,7 @@ input[type="file"] {
   font-size: 15px;
   font-family: var(--primary-font);
 }
-.box-1 {
-  justify-content: flex-start !important;
-  padding-top: 0.4% !important;
-  gap: 20px;
-}
 
-.appbar {
-  background: var(--text-card) !important;
-  box-shadow: none !important;
-}
-
-.company-button {
-  color: #85cb33 !important;
-  font-weight: 700 !important;
-  font-size: 14px !important;
-  font-family: var(--primary-font) !important;
-}
-.company {
-  font-family: var(--primary-font) !important;
-}
 .submit:hover {
   background-color: #85cb33;
   color: #fff;
@@ -281,18 +312,6 @@ input[type="file"] {
   letter-spacing: -0.02em !important;
   width: 100%;
 }
-h1 {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  font-family: var(--primary-font);
-  font-weight: 600;
-  font-size: 50px;
-  line-height: 70px;
-  letter-spacing: -0.02em;
-  align-items: center;
-  margin-top: 65px;
-}
 .h1-landing {
   font-family: var(--primary-font);
   font-weight: 800;
@@ -301,49 +320,8 @@ h1 {
   margin-left: 10%;
   line-height: 70px;
 }
-.p-landing {
-  font-family: var(--primary-font);
-  font-size: 23px;
-  line-height: 40px;
-  font-weight: 400;
-  margin-left: 10%;
-  margin-top: 3%;
-}
-a {
-  font-family: var(--primary-font);
-  font-size: 23px;
-  line-height: 40px;
-  font-weight: 400;
-  color: black;
-}
-.logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  margin-top: 2%;
-}
-.logo-img {
-  transform: scale(0.75);
-}
-h2 {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  font-family: var(--primary-font);
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-  letter-spacing: -0.02em;
-  align-items: center;
-  margin-bottom: 5%;
-}
-p {
-  display: flex;
-  font-family: var(--primary-font);
-  font-size: 17px;
-  line-height: 40px;
-}
+
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -354,12 +332,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .box-add {
   margin: 20px;
 }
-li {
-  display: flex;
-  font-family: var(--primary-font);
-  font-size: 17px;
-  line-height: 40px;
-}
+
 .blogs {
   display: flex;
   flex-direction: column;
@@ -385,73 +358,11 @@ li {
     flex-grow: 0;
   }
 }
-.card {
-  width: 300px;
-  height: 320px;
-  cursor: pointer;
-  position: relative;
-  background-image: url("https://static.vecteezy.com/packs/media/components/global/search-explore-nav/img/vectors/term-bg-1-666de2d941529c25aa511dc18d727160.jpg") !important;
-}
 
-.mar-card {
-  width: 500px;
-  height: 400px;
-  cursor: pointer;
-  position: relative;
-}
-.mar-card:hover {
-  background-color: rgb(255, 217, 0);
-  transition: 0.5s;
-}
-.mar-card:hover .more {
-  display: block;
-  transition: 0.5s;
-}
-.mar-card:hover .head {
-  color:black;
-}
-.mar-card:hover .mar-text {
-  color:black;
-}
-.mar-card-1 {
-  width: 375px;
-  height: 300px;
-  cursor: pointer;
-  position: relative;
-}
-.vl{
-  border-left: 1px solid gray;
-  height: 300px;
-}
-.mar-card-1:hover {
-  background-color: var(--text-main);
-  transition: 0.5s;
-}
-.mar-card-1:hover .head {
-  color:var(--text-card);
-  transition: 0.5s;
-}
-.mar-card-1:hover .mar-text {
-  color:var(--text-card);
-  transition: 0.5s;
-}
-.head {
-  font-family: var(--primary-font);
-  font-weight: 700;
-  font-size: 30px;
-  margin: 40px;
-}
-.mar-text {
-  font-family: var(--primary-font);
-  font-weight: 450;
-  font-size: 18px;
-  margin: 40px;
-}
-.more {
-  margin: 40px;
-  font-weight: 450;
-  display: none;
-}
+
+
+
+
 .row-card {
   margin-left: 9%;
   margin-right: 9%;
@@ -489,52 +400,8 @@ li {
   line-height: 70px;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: 0.5s ease;
-  background-color: rgb(255, 217, 0);
-}
 
-.card:hover .overlay {
-  opacity: 1;
-}
-.card-img {
-  width: 350px;
-  height:100px;
-  cursor: pointer;
-  position: relative;
-  background-repeat: no-repeat;
-  border:gray 1px solid;
-  background-size:cover;
-  background-image: url("https://via.placeholder.com/350X100")!important;
-}
-.card-img:hover .overlay {
-  opacity: 1;
-}
-.text {
-  color: black;
-  font-size: 17px;
-  font-weight: 500;
-  font-family: var(--primary-font);
-  display: flex;
-  justify-content: space-around;
-  margin: 20px;
-  margin-top: 30%;
-}
-.text-1 {
-  color: black;
-  font-size: 17px;
-  font-weight: 500;
-  font-family: var(--primary-font);
-  display: flex;
-  justify-content: space-around;
-  margin: 20px;
-}
+
 .work {
   display: flex;
   justify-content: flex-end;
@@ -557,318 +424,6 @@ li {
   background-color: rgb(255, 217, 0);
   color: black;
 }
-.contact-main{
-  margin-top: 5%;
-  width: 100%;
-  height: 270px;
-  background-color:rgb(255, 217, 0) ;
-  display: flexbox;
-}
-.contact-1 {
-  font-family: var(--primary-font);
-  font-weight: 800;
-  font-size: 55px;
-  display: flex;
-  color:black;
-  justify-content: center;
-  margin-top: 2%;
-  line-height: 40px;
-  cursor: pointer;
-  text-decoration: underline;
-}
-.contact-2 {
-  font-family: var(--primary-font);
-  font-size: 23px;
-  padding-top: 6%;
-  font-weight: 400;
-  color: #000;
-  display: flex;
-  justify-content: center;
-}
-
-footer{
-  background: #000;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-}
-footer::before{
-  content: '';
-  left: 0;
-  top: 100px;
-  height: 1px;
-  width: 100%;
-  background: #000;
-}
-footer .content{
-  max-width: 1250px;
-  margin: auto;
-  padding: 30px 40px 40px 40px;
-
-}
-footer .content .top{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}
-.content .top .logo-details{
-  color: #fff;
-  font-family: var(--primary-font);
-  font-size: 30px;
-}
-.content .top .media-icons{
-  display: flex;
-}
-.content .top .media-icons a{
-  height: 40px;
-  width: 40px;
-  margin: 0 8px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 40px;
-  color: #fff;
-  font-size: 17px;
-  text-decoration: none;
-  transition: all 0.4s ease;
-}
-.top .media-icons a:nth-child(1){
-  background: #4267B2;
-}
-.top .media-icons a:nth-child(1):hover{
-  color: #4267B2;
-  background: #fff;
-}
-.top .media-icons a:nth-child(2){
-  background: #1DA1F2;
-}
-.top .media-icons a:nth-child(2):hover{
-  color: #1DA1F2;
-  background: #fff;
-}
-.top .media-icons a:nth-child(3){
-  background: #E1306C;
-}
-.top .media-icons a:nth-child(3):hover{
-  color: #E1306C;
-  background: #fff;
-}
-.top .media-icons a:nth-child(4){
-  background: #0077B5;
-}
-.top .media-icons a:nth-child(4):hover{
-  color: #0077B5;
-  background: #fff;
-}
-.top .media-icons a:nth-child(5){
-  background: #FF0000;
-}
-.top .media-icons a:nth-child(5):hover{
-  color: #FF0000;
-  background: #fff;
-}
-footer .content .link-boxes{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-footer .content .link-boxes .box{
-  width: calc(100% / 5 - 10px);
-}
-.content .link-boxes .box .link_name{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 400;
-  margin-bottom: 10px;
-  position: relative;
-}
-.link-boxes .box .link_name::before{
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -2px;
-  height: 2px;
-  width: 35px;
-  background: #fff;
-}
-.content .link-boxes .box li{
-  margin: 6px 0;
-  list-style: none;
-}
-.content .link-boxes .box li a{
-  color: #fff;
-  font-size: 14px;
-  font-weight: 400;
-  text-decoration: none;
-  opacity: 0.8;
-  transition: all 0.4s ease
-}
-.content .link-boxes .box li a:hover{
-  opacity: 1;
-  text-decoration: underline;
-}
-.content .link-boxes .input-box{
-  margin-right: 55px;
-}
-.link-boxes .input-box input{
-  height: 40px;
-  width: calc(100% + 55px);
-  outline: none;
-  border: 2px solid #AFAFB6;
-  background: #140B5C;
-  border-radius: 4px;
-  padding: 0 15px;
-  font-size: 15px;
-  color: #fff;
-  margin-top: 5px;
-}
-.link-boxes .input-box input::placeholder{
-  color: #AFAFB6;
-  font-size: 16px;
-}
-.link-boxes .input-box input[type="button"]{
-  background: #fff;
-  color: #140B5C;
-  border: none;
-  font-size: 18px;
-  font-weight: 500;
-  margin: 4px 0;
-  opacity: 0.8;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-.input-box input[type="button"]:hover{
-  opacity: 1;
-}
-footer .bottom-details{
-  width: 100%;
-background: #2c303a;
-}
-footer .bottom-details .bottom_text{
-  max-width: 1250px;
-  margin: auto;
-  padding: 20px 40px;
-  display: flex;
-  justify-content: space-between;
-}
-.bottom-details .bottom_text span,
-.bottom-details .bottom_text a{
-  font-size: 14px;
-  font-weight: 300;
-  color: #fff;
-  opacity: 0.8;
-  text-decoration: none;
-}
-.bottom-details .bottom_text a:hover{
-  opacity: 1;
-  text-decoration: underline;
-}
-.bottom-details .bottom_text a{
-  margin-right: 10px;
-}
-@media (max-width: 900px) {
-  footer .content .link-boxes{
-    flex-wrap: wrap;
-  }
-  footer .content .link-boxes .input-box{
-    width: 40%;
-    margin-top: 10px;
-  }
-}
-@media (max-width: 700px){
-  footer{
-    position: relative;
-  }
-  .content .top .logo-details{
-    font-size: 26px;
-  }
-  .content .top .media-icons a{
-    height: 35px;
-    width: 35px;
-    font-size: 14px;
-    line-height: 35px;
-  }
-  footer .content .link-boxes .box{
-    width: calc(100% / 3 - 10px);
-  }
-  footer .content .link-boxes .input-box{
-    width: 60%;
-  }
-  .bottom-details .bottom_text span,
-  .bottom-details .bottom_text a{
-    font-size: 12px;
-  }
-}
-@media (max-width: 520px){
-  footer::before{
-    top: 145px;
-  }
-  footer .content .top{
-    flex-direction: column;
-  }
-  .content .top .media-icons{
-    margin-top: 16px;
-  }
-  footer .content .link-boxes .box{
-    width: calc(100% / 2 - 10px);
-  }
-  footer .content .link-boxes .input-box{
-    width: 100%;
-  }
-}
-   .c1{
-    display: inline-block;
-  }
-  .c2{
-    display: inline-block;
-  }
-  .c3{
-    display: inline-block;
-  }
-  h4{
-   font-family: var(--primary-font);
-  font-weight: 800;
-  font-size: 55px;
-  margin-top: 5%;
-  margin-left: 10%;
-  line-height: 60px;
-  }
-  h4 .type{
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 1s steps(25, end) forwards;
-          font-family: var(--primary-font);
-  font-weight: 800;
-  font-size: 55px;
-  }
-  h4 .type2{
-      font-family: var(--primary-font);
-  font-weight: 800;
-  font-size: 55px;
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 1s steps(25, end) forwards;
-      animation-delay: 1s;
-  }
-  h4 .type3{
-      font-family: var(--primary-font);
-  font-weight: 800;
-  font-size: 55px;
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 1s steps(25, end) forwards;
-      animation-delay: 2s;
-  }
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
 
 
 .tab{
@@ -877,70 +432,9 @@ footer .bottom-details .bottom_text{
   font-weight: 700 !important;
   font-size: large !important;
 }
-.tab-1{
-  color: var(--text-main) !important;
-  font-family: var(--primary-font) !important;
-  font-weight: 700 !important;
-  font-size: medium !important;
-}
 
 
-.cookie-message {
-  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-  border-radius: 10px;
-  padding: 15px 0;
-  background: #f7f8fb;
-  border: 1px solid rgba(0,0,0,.15);
-  box-shadow: 0 0 16px 2px rgba(0,0,0,.05), 0 10px 10px 2px rgba(0,0,0,.05);
-  font-size: 12px;
-  line-height: 40px;
-  border-top: 1px solid #e4e4e4;
-  color:black;
-  position: fixed;
-  z-index: 100;
-  bottom: 10%;
-  right: 2%;
-  margin: auto;
-  max-width: 540px;
-  display: -ms-flexbox;
-  display: flex;
-}
-.cookie-message img {
-  height: 50px;
-  width: 50px;
-  margin: 0 15px;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-}
-.cookie-message span {
-  display: inline-block;
-  line-height: 1.5;
-  padding-right: 16px;
-  border-right: 1px solid rgba(0,0,0,.1);
-}
-.cookie-message a.close {
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  border: none ;
-  font-size: 24px;
-  padding: 0 20px 0 16px;
-  position: relative;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-  color: #919191 !important;
-  transition: color 0.2s;
-}
-.cookie-message a.close:hover { color: #795548; }
-.close
+.postspage
 {
-  border: none;
-  background: transparent;
-  cursor: pointer;
-  color: #000;
-}
-.close-1
-{
-  display: none;
+  font-family: var(--primary-font);
 }
