Made some of the features maobile responsive

--- a/anile-media-website/src/components/Marketing/MarketingCard.module.css
+++ b/anile-media-website/src/components/Marketing/MarketingCard.module.css
@@ -42,3 +42,11 @@
     font-weight: 400;
     color: black;
   }
+  @media (max-width: 700px) {
+    .mar_card {
+      width: 500px;
+      height: 550px;
+      cursor: pointer;
+      position: relative;
+    }
+  }
