--- a/anile-media-website/src/components/Blog/BlogsCard.module.css
+++ b/anile-media-website/src/components/Blog/BlogsCard.module.css
@@ -1,6 +1,8 @@
 .mar_card_1 {
     width: 375px;
     height: 300px;
+    margin-left: 10%;
+    margin-top: -80%;
     cursor: pointer;
     position: relative;
   }
@@ -24,11 +26,16 @@
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 30px;
-    margin: 40px ;
+    padding: 40px !important;
   }
   .mar_text {
     font-family: var(--primary-font);
     font-weight: 450;
     font-size: 18px;
-    margin: 40px;
+    padding: 40px;
+  }
+    @media (max-width: 700px) {
+    .h1_landing_1{
+        font-size: 35px;
+      }
   }
