--- a/anile-media-website/src/components/Contact/Contact.module.css
+++ b/anile-media-website/src/components/Contact/Contact.module.css
@@ -21,9 +21,19 @@
     font-family: var(--primary-font);
     font-size: 23px;
     padding-top: 6%;
+    text-align: center;
     font-weight: 400;
     color: #000;
     display: flex;
     justify-content: center;
+  }
+  @media (max-width: 700px) {
+    .contact_2{
+      padding-top: 10%;
+      padding-right: 6%;
+      padding-left: 6%;
+      padding-bottom: 6%;
+    }
+      
   }
   
