--- a/anile-media-website/src/components/Landing/Landing.module.css
+++ b/anile-media-website/src/components/Landing/Landing.module.css
@@ -58,6 +58,7 @@
     line-height: 40px;
     font-weight: 400;
     margin-left: 10%;
+    margin-right: 40%;
     margin-top: 3%;
   }
   
@@ -66,4 +67,28 @@
     justify-content: center;
     margin-top: 2%;
   }
-  
+  @media (max-width: 700px) {
+   
+    .h4 .type{
+      font-size: 35px;
+      margin-left: 0%;
+      margin-top: -2%;
+    }
+    .h4 .type2{
+      font-size: 35px;
+      margin-left: 0%;
+      margin-top: -10%;
+
+    }
+    .h4 .type3{
+      font-size: 35px;
+      margin-left: 0%;
+      margin-top: -10%;
+
+    }
+    .p_landing
+    {
+      font-size:16px;
+      margin-right: 10%;
+    }
+  }
