--- a/anile-media-website/src/components/Client/ClientsCard.module.css
+++ b/anile-media-website/src/components/Client/ClientsCard.module.css
@@ -30,3 +30,9 @@
     transition: 0.5s ease;
     background-color: rgb(255, 217, 0);
   }
+  @media (max-width: 700px) {
+    .card_img
+    {
+      width: 300px;
+    }
+  }
