--- a/anile-media-website/src/components/Navbar/Navbar.module.css
+++ b/anile-media-website/src/components/Navbar/Navbar.module.css
@@ -20,7 +20,7 @@
   }
   .button_active_1 {
     height: 45px;
-    width: 130px;
+    width: 150px;
     margin-left: 60px;
     background-color: #85cb33;
     color: var(--text-card);
@@ -32,4 +32,10 @@
   }
   .button_active_1:hover {
     background-color: #79bb2d;
+  }
+  @media (max-width: 700px) {
+    .button_active_1
+    {
+      display: none;
+    }
   }
