--- a/anile-media-website/src/components/Client/Clients.module.css
+++ b/anile-media-website/src/components/Client/Clients.module.css
@@ -11,8 +11,8 @@
     margin-top: 5%;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 10%;
-    margin-right: 8%;
+    justify-content: center;
+    align-items: center;
   }
   @media (max-width: 700px) {
     .h1_landing_1{
