--- a/anile-media-website/src/styles/globals.css
+++ b/anile-media-website/src/styles/globals.css
@@ -14,8 +14,8 @@
   --secondary-font: "Work Sans";
   --tertiary-font: "Poppins";
   background-color: white;
-  --text-card: black;
-  --text-main: black;
+  --text-card: #ffffff;
+  --text-main: #333333;
   --a-color:black;
 }
 
