--- a/anile-media-website/src/components/VerticalTabs/VerticalTabs.module.css
+++ b/anile-media-website/src/components/VerticalTabs/VerticalTabs.module.css
@@ -1,7 +1,16 @@
+
+.tab{
+  color: var(--text-main) !important;
+  font-family: var(--primary-font);
+  font-weight: 700 !important;
+  font-size: medium !important;
+  width: 100% ;
+}
+
 .tab_1{
     color: var(--text-main) !important;
     font-family: var(--primary-font) !important;
     font-weight: 700 !important;
     font-size: medium !important;
+    width:100%;
   }
-  
